fixed the nav bar overflow and added everything to the shop page; one day work

--- a/src/app.css
+++ b/src/app.css
@@ -8,16 +8,17 @@
 	box-sizing: border-box;
 }
 
-/* html {
+html {
 	font-size: 65%;
-} */
+}
 
-/* body {
+body {
 	margin: 0;
 	padding: 0;
 	font-family: "Roboto", sans-serif;
 	font-weight: 400;
-} */
+	overflow-x: hidden;
+} 
 
 img {
 	display: block;
@@ -42,7 +43,6 @@ h2 {
 .App__header {
 	background-color: #222;
 	background-image: url("https://unsplash.it/1000/300?image=823");
-	background-size: cover;
 	color: white;
 	padding: 10px 10px;
 }
@@ -159,7 +159,7 @@ h2 {
   * ============================== */
 .Cart {
 	position: fixed;
-	z-index: 9;
+	z-index: 10;
 	top: 0;
 	left: 0;
 	height: 100%;
@@ -400,47 +400,50 @@ h2 {
 .section_One {
 	height: 100vh;
 	background-color: black;
-
 }
+
 .section_Two {
 	height: 100vh;
-	background-color: blue;
-
+	background-color: black;
 }
+
 .section_Three {
 	height: 100vh;
-	background-color: green;
-
+	background-color: black;
 }
 
 .Panel {
 	background-color: rgba(112, 112, 112, 0.15);
-	height: 30vh;
-	width: 100px;
+	height: 26vh;
+	width: 7vw;
 	border-radius: 33px;
 	position: fixed;
 	top: 35%;
 	left: 40px;
+	place-items: center;
 }
 
-.Highlight {
-	position: absolute;
-	justify-content: center;
-	align-items: center;
+/* .Highlight {
+	margin: 0 auto;
+	position: relative;
 	background-color: #264EE7;
 	border-radius: 19px;
 	height: 70px;
 	width: 70px;
 	z-index: -1;
-}
-
-.icon {
-	width: 50%;
-	margin: 0 auto;
+	place-items: center;
+	display: grid;
 	justify-content: center;
 	align-items: center;
-	position: absolute;
-	display: block;
+} */
+
+.icon {
+	width: 30%;
+	margin: 0 auto;
+	position: relative;
+	display: grid;
+	padding-top: 25%;
+	cursor: pointer;
 }
 
 .button__purchase {
@@ -450,7 +453,6 @@ h2 {
 	padding: 10px 17px;
 	cursor: pointer;
 }
-
 
 /* SINGLE PRODUCT VIEW
 	* ============================== */
